--- a/easycomponent/.babelrc
+++ b/easycomponent/.babelrc
@@ -1,10 +1,16 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "stage-0"
-  ],
-  "plugins": [
-    "react-hot-loader/babel"
-  ]
+  "presets": ["react", "es2015", "env","stage-2"],
+  "env": {
+    "development": {
+    "plugins": [["react-transform", {
+       "transforms": [{
+         "transform": "react-transform-hmr",
+         
+         "imports": ["react"],
+         
+         "locals": ["module"]
+       }]
+     }]]
+    }
+  }
 }
